# Copyright (C) 2007 Richard Spindler <richard.spindler AT gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

ACLOCAL_AMFLAGS= -I m4

SUBDIRS=src include doc
EXTRA_DIST = Doxyfile

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = frei0r.pc

docsdir = ${prefix}/share/doc/${PACKAGE}-${VERSION}
docs_DATA = README ChangeLog TODO AUTHORS 
