htmldocs_DATA = \
	annotated.html \
	doxygen.png \
	functions.html \
	globals.html \
	group__icons.html \
	hierarchy.html \
	structf0r__param__color.html \
	tab_b.gif \
	dir_c6a51e201754b7c7dc5a21651891d7e2.html \
	files.html \
	functions_vars.html \
	globals_type.html \
	group__PARAM__TYPE.html \
	index.html \
	structf0r__param__info.html \
	tab_l.gif \
	dirs.html \
	frei0r_8h.html \
	globals_defs.html \
	group__COLOR__MODEL.html \
	group__PLUGIN__TYPE.html \
	structf0r__param__position.html \
	tab_r.gif \
	doxygen.css \
	frei0r_8h-source.html \
	globals_func.html \
	group__concurrency.html \
	group__pluglocations.html \
	modules.html \
	structf0r__plugin__info.html \
	tabs.css

htmldocsdir=${prefix}/share/doc/${PACKAGE}-${VERSION}/html

